[package]
name = "compiler"
version = "0.0.2"
edition = "2021"
authors = ["ky0422 (Kim Jun Young)"]
description = "Compiler library for Signature programming language"
license = "MIT"
repository = "https://github.com/siglang/signature"

[dependencies]
parser = { path = "../parser" }
ir_interpreter = { path = "../ir_interpreter" }
thiserror = "1.0.37"
