[package]
name = "compiler"
version = "0.0.0"
edition = "2021"
authors = ["ky0422 (Kim Jun Young)"]
description = "IR Compiler for Signature programming language"
license = "MIT"
repository = "https://github.com/siglang/signature"

[dependencies]
thiserror = "1.0.37"
parser = { path = "../parser" }
