[package]
name = "ir_interpreter"
version = "0.0.3"
edition = "2021"
authors = ["ky0422 (Kim Jun Young)"]
description = "Signature IR interpreter for Signature programming language"
license = "MIT"
repository = "https://github.com/siglang/signature"

[dependencies]
parser = { path = "../parser" }
thiserror = "1.0.37"
