[package]
name = "sntk_compiler"
version = "0.0.1"
edition = "2021"
authors = ["ky0422 (Kim Jun Young)"]
description = "Compiler library for Sanetaka (sntk) programming language"
license = "MIT"
repository = "https://github.com/ky0422/sanetaka"

[dependencies]
sntk_core = { path = "../sntk_core" }
sntk_ir = { path = "../sntk_ir" }
sntk_proc = { path = "../sntk_proc" }
