[package]
name = "sntk_ir"
version = "0.0.2"
edition = "2021"
authors = ["ky0422 (Kim Jun Young)"]
description = "Sanetaka IR library for Sanetaka (sntk) programming language"
license = "MIT"
repository = "https://github.com/ky0422/sanetaka"

[dependencies]
sntk_core = { path = "../sntk_core" }
sntk_proc = { path = "../sntk_proc" }
