[package]
name = "sntk_proc"
version = "0.0.0"
edition = "2021"
authors = ["ky0422 (Kim Jun Young)"]
description = "Sanetaka procedural macros"
license = "MIT"
repository = "https://github.com/ky0422/sanetaka"

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.103", features = ["full"] }

[lib]
proc-macro = true
